VibeEntryService with validation and mapping